--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 <div class="portfolio-info">
                   <h4>Gerbang</h4>
                   <p>Gerbang untuk universal</p>
-                  <a href="assets/img/projects/repairs-1.jpg" title="Gerbang" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/pager 3.jpg" title="Gerbang" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   
                 </div>
               </div>
@@ -898,7 +898,7 @@
             <li><a href="index.html">Beranda</a></li>
             <li><a href="about.html">Tentang</a></li>
             <li><a href="services.html">Layanan</a></li>
-            <li><a href="projects.html">ProjectT</a></li>
+            <li><a href="projects.html">Project</a></li>
             <li><a href="contact.html">Kontak</a></li>
           </ul>
         </div>
