--- a/about.html
+++ b/about.html
@@ -224,11 +224,27 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
+              <img src="assets/img/foto pm.png" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href="https://wa.me/082124824408"><i class="bi bi-whatsapp"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Dede Suherman</h4>
+              <span>Manager</span>
+              <p></p>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
+            <div class="member-img">
               <img src="assets/img/foto sekret.png" class="img-fluid" alt="">
               <div class="social">
                 <a href="https://www.facebook.com/profile.php?id=100070331732851&mibextid=LQQJ4d"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.instagram.com/lazuardihsnkml?igsh=MWxlNmpxaXp6bXBrZA%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
-                <a href="https://wa.me/081311973788"><i class="bi bi-linkedin"></i></a>
+                <a href="https://wa.me/081311973788"><i class="bi bi-whatsapp"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -237,6 +253,7 @@
               <p></p>
             </div>
           </div><!-- End Team Member -->
+          
 
           <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
@@ -327,7 +344,7 @@
             <li><a href="index.html">Beranda</a></li>
             <li><a href="about.html">Tentang</a></li>
             <li><a href="services.html">Layanan</a></li>
-            <li><a href="projects.html">ProjectT</a></li>
+            <li><a href="projects.html">Project</a></li>
             <li><a href="contact.html">Kontak</a></li>
           </ul>
         </div>
