--- a/projects.html
+++ b/projects.html
@@ -473,7 +473,7 @@
             <li><a href="index.html">Beranda</a></li>
             <li><a href="about.html">Tentang</a></li>
             <li><a href="services.html">Layanan</a></li>
-            <li><a href="projects.html">ProjectT</a></li>
+            <li><a href="projects.html">Project</a></li>
             <li><a href="contact.html">Kontak</a></li>
           </ul>
         </div>
