--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p>mahesakarya.kencana2007</p>
+              <p>mahesakarya.kencana2007@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -130,7 +130,7 @@
             <p>Jl. Tengsaw no.19 Tarikolot</p>
             <p>Kec. Citereup kab. Bogor Jawa Barat 16810 </p>
             <p class="mt-3"><strong>Phone:</strong> <span>+62 888-0847-0272</span></p>
-            <p><strong>Email:</strong> <span>mahesakarya.kencana2007</span></p>
+            <p><strong>Email:</strong> <span>mahesakarya.kencana2007@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://www.facebook.com/cv.mahesa.karya.kencana?mibextid=rS40aB7S9Ucbxw6v"><i class="bi bi-facebook"></i></a>
