ganti emial dan no hp

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone"></i>
               <h3>Telephone</h3>
-              <p>+62 888-0847-0272</p>
+              <p>082213134140</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -105,7 +105,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p>mahesakarya.kencana2007@gmail.com</p>
+              <p>Cv.mahesakarya.kencana2007@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
