--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p>Cv.mahesakarya.kencana2007@gmail.com</p>
+              <p>cv.mahesakarya.kencana2007@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
