--- a/services.html
+++ b/services.html
@@ -177,8 +177,8 @@
           <div class="footer-contact pt-3">
             <p>Jl. Tengsaw no.19 Tarikolot</p>
             <p>Kec. Citereup kab. Bogor Jawa Barat 16810 </p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+62 888-0847-0272</span></p>
-            <p><strong>Email:</strong> <span>mahesakarya.kencana2007@gmail.com</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>082213134140</span></p>
+            <p><strong>Email:</strong> <span>cv.mahesakarya.kencana2007@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://www.facebook.com/cv.mahesa.karya.kencana?mibextid=rS40aB7S9Ucbxw6v"><i class="bi bi-facebook"></i></a>
