--- a/index.html
+++ b/index.html
@@ -882,13 +882,13 @@
           <div class="footer-contact pt-3">
             <p>Jl. Tengsaw no.19 Tarikolot</p>
             <p>Kec. Citereup kab. Bogor Jawa Barat 16810 </p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+62 888-0847-0272</span></p>
-            <p><strong>Email:</strong> <span>mahesakarya.kencana2007</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>082213134140</span></p>
+            <p><strong>Email:</strong> <span>cv.mahesakarya.kencana2007@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://www.facebook.com/cv.mahesa.karya.kencana?mibextid=rS40aB7S9Ucbxw6v"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/mahesa_karya_kencana?igsh=MTR1c3NkdXY2bmRsZg=="><i class="bi bi-instagram"></i></a>
-            <a href="https://wa.me/088808470272"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://wa.me/082213134140"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
