--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>CV Mahses Karya Kencana</title>
-  <meta content="" name="description">
+  <meta content="" name="CV Mahesa Karya Kencana Adalah Perusahaan Kontraktor umum (GENERAL CONTRACTOR) yang bergerak di bidang JASA KONTRUKSI, memiliki tenaga ahli dibidang ARCHITECTURE, CIVIL, CONSTRUCTION, MECHANICAL AND ELECTRICAL AND STEEL CONSTRUCTIONS.">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/Logo_001.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/mahesa.jpeg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
